timeline overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -373,4 +373,7 @@ footer .copyright{
         padding: 0 10px;
         width: auto;
     }
+    .motivational-text h4{
+        font-size: 1rem;
+    }
 }
